[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/widgets/bar_editor.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/spin_bar.gd" type="Script" id=2]
[ext_resource path="res://ui/widgets/tooltip.gd" type="Script" id=3]

[node name="BarEditor" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )
min_value = -255.0
max_value = 255.0

[node name="Params" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 446.0

[node name="R" type="ReferenceRect" parent="Params"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )

[node name="Steps" type="ProgressBar" parent="Params"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
rect_min_size = Vector2( 36, 14 )
max_value = 256.0
step = 1.0
percent_visible = false
script = ExtResource( 2 )
big_step = 8.0
huge_step = 32.0

[node name="Editor" type="ScrollContainer" parent="."]
margin_left = 68.0
margin_right = 1024.0
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="HBC" type="VBoxContainer" parent="Editor"]
margin_bottom = 446.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Values" type="Control" parent="Editor/HBC"]
margin_bottom = 426.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Value" type="PanelContainer" parent="Editor/HBC/Values"]
self_modulate = Color( 1, 1, 1, 0.752941 )
margin_right = 14.0
margin_bottom = 28.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="LoopRange" type="Control" parent="Editor/HBC"]
margin_top = 430.0
margin_bottom = 446.0
rect_min_size = Vector2( 0, 16 )
rect_clip_content = true
size_flags_horizontal = 3

[connection signal="value_changed" from="Params/Steps" to="." method="_on_Steps_value_changed"]
[connection signal="draw" from="Editor" to="." method="_on_Editor_draw"]
[connection signal="draw" from="Editor/HBC/Values" to="." method="_on_Values_draw"]
[connection signal="draw" from="Editor/HBC/LoopRange" to="." method="_on_LoopRange_draw"]
